NODE-2595 Change block reward distribution
